# ubi

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  west.yml
doc/: environment_setup.md  features_candidates.md  hardware_tests.md
lib/: CMakeLists.txt  Kconfig
lib/include/: ubi.h
lib/src/: ubi.c  ubi_utils.c  ubi_utils.h
sample/: CMakeLists.txt  prj.conf
sample/boards/: b_u585i_iot02a.overlay
sample/src/: main.c
scripts/: format.sh  gen_test_arrays.py
tests/: CMakeLists.txt  prj.conf
tests/src/: arrays.h  tests.c  tests_ubi_device.c  tests_ubi_erase.c  tests_ubi_map_unmap.c  tests_ubi_mixed.c  tests_ubi_volumes.c  tests_ubi_write_read.c
